подготовка к завершению, выявление мелких ошибок

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
         <section class="navigation center">
             <ul class="menu">
                 <li class="menu__list "><a href="#1" class="menu__link">home</a>
-                    <div class="dropdown">
-                        <div class="menu__item">
+                    <div class="dropdown dropdown__home">
+                        <div class="menu_item">
                             <h3 class="menu__title">Home</h3>
                             <a href="#" class="menu__link menu__link_drop">Dresses</a>
                             <a href="#" class="menu__link menu__link_drop">Tops</a>
@@ -182,7 +182,8 @@
                             <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
                         </div>
                         <div class="menu__item menu__item_bg">
-                            <img class="menu__item_img" src="./img/sale_baner.png" alt="">
+                            <img class="menu__item_img" src="./img/sale-baner.png" alt="">
+                            <p class="menu__item_sale">Super sale!</p>
                         </div>
                     </div>
                 </li>
@@ -220,9 +221,10 @@
                             <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
                             <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
                         </div>
-                        <div">
-                            <img class="menu__item_img" src="./img/sale_baner.png" alt="">
-                    </div>
+                        <div class="menu__item menu__item_bg">
+                            <img class="menu__item_img" src="./img/sale-baner.png" alt="">
+                            <p class="menu__item_sale">Super sale!</p>
+                        </div>
                     </div>
                 </li>
                 <li class="menu__list cntr"><a href="#4" class="menu__link">kids</a>
@@ -260,7 +262,8 @@
                             <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
                         </div>
                         <div class="menu__item menu__item_bg">
-                            <img class="menu__item_img" src="./img/sale_baner.png" alt="">
+                            <img class="menu__item_img" src="./img/sale-baner.png" alt="">
+                            <p class="menu__item_sale">Super sale!</p>
                         </div>
                     </div>
                 </li>
@@ -299,7 +302,8 @@
                             <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
                         </div>
                         <div class="menu__item menu__item_bg">
-                            <img class="menu__item_img" src="./img/sale_baner.png" alt="">
+                            <img class="menu__item_img" src="./img/sale-baner.png" alt="">
+                            <p class="menu__item_sale">Super sale!</p>
                         </div>
                     </div>
                 </li>
@@ -338,7 +342,8 @@
                             <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
                         </div>
                         <div class="menu__item menu__item_bg">
-                            <img class="menu__item_img" src="./img/sale_baner.png" alt="">
+                            <img class="menu__item_img" src="./img/sale-baner.png" alt="">
+                            <p class="menu__item_sale">Super sale!</p>
                         </div>
                     </div>
                 </li>
@@ -377,7 +382,8 @@
                             <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
                         </div>
                         <div class="menu__item menu__item_bg">
-                            <img class="menu__item_img" src="./img/sale_baner.png" alt="">
+                            <img class="menu__item_img" src="./img/sale-baner.png" alt="">
+                            <p class="menu__item_sale">Super sale!</p>
                         </div>
                     </div>
                 </li>
