--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
         <section class="navigation center">
             <ul class="menu">
                 <li class="menu__list "><a href="#1" class="menu__link">home</a>
-                    <div class="dropdown dropdown__home">
-                        <div class="menu_item">
+                    <div class="dropdown dropdown_home">
+                        <div class="menu__item">
                             <h3 class="menu__title">Home</h3>
                             <a href="#" class="menu__link menu__link_drop">Dresses</a>
                             <a href="#" class="menu__link menu__link_drop">Tops</a>
@@ -182,7 +182,9 @@
                             <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
                         </div>
                         <div class="menu__item menu__item_bg">
-                            <img class="menu__item_img" src="./img/sale-baner.png" alt="">
+                            <a href="#SupersaleMan" class="menu__link menu__link_drop">
+                                <img class="menu__item_img" src="./img/sale-baner.png" alt="">
+                            </a>
                             <p class="menu__item_sale">Super sale!</p>
                         </div>
                     </div>
@@ -222,7 +224,9 @@
                             <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
                         </div>
                         <div class="menu__item menu__item_bg">
-                            <img class="menu__item_img" src="./img/sale-baner.png" alt="">
+                            <a href="#SupersaleWoman" class="menu__link menu__link_drop">
+                                <img class="menu__item_img" src="./img/sale-baner.png" alt="">
+                            </a>
                             <p class="menu__item_sale">Super sale!</p>
                         </div>
                     </div>
@@ -262,7 +266,9 @@
                             <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
                         </div>
                         <div class="menu__item menu__item_bg">
-                            <img class="menu__item_img" src="./img/sale-baner.png" alt="">
+                            <a href="#SupersaleKids" class="menu__link menu__link_drop">
+                                <img class="menu__item_img" src="./img/sale-baner.png" alt="">
+                            </a>
                             <p class="menu__item_sale">Super sale!</p>
                         </div>
                     </div>
@@ -302,7 +308,9 @@
                             <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
                         </div>
                         <div class="menu__item menu__item_bg">
-                            <img class="menu__item_img" src="./img/sale-baner.png" alt="">
+                            <a href="#SupersaleAcc" class="menu__link menu__link_drop">
+                                <img class="menu__item_img" src="./img/sale-baner.png" alt="">
+                            </a>
                             <p class="menu__item_sale">Super sale!</p>
                         </div>
                     </div>
@@ -342,7 +350,9 @@
                             <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
                         </div>
                         <div class="menu__item menu__item_bg">
-                            <img class="menu__item_img" src="./img/sale-baner.png" alt="">
+                            <a href="#SupersaleFeatured" class="menu__link menu__link_drop">
+                                <img class="menu__item_img" src="./img/sale-baner.png" alt="">
+                            </a>
                             <p class="menu__item_sale">Super sale!</p>
                         </div>
                     </div>
@@ -382,7 +392,9 @@
                             <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
                         </div>
                         <div class="menu__item menu__item_bg">
-                            <img class="menu__item_img" src="./img/sale-baner.png" alt="">
+                            <a href="#SupersaleHot" class="menu__link menu__link_drop">
+                                <img class="menu__item_img" src="./img/sale-baner.png" alt="">
+                            </a>
                             <p class="menu__item_sale">Super sale!</p>
                         </div>
                     </div>
