создаем разметку гласного блока с фильтрами карточками и сортировкой

--- a/product.html
+++ b/product.html
@@ -413,6 +413,24 @@
     </div>
     <!-- // Блок хлебные крошки -->
 
+    <!-- Блок продукты и фильтры -->
+    <section class="filter-product center">
+        <div class="filter">
+            <details>
+                <summary>Category</summary>
+                Lorem ipsum dolor sit amet.
+            </details>
+        </div>
+        <div class="product">
+            <div class="product__filter"></div>
+            <div class="product__sort"></div>
+            <div class="product__cards"></div>
+            <div class="product__button"></div>
+
+        </div>
+    </section>
+    <!-- // Блок продукты и фильтры -->
+
     <!-- блок Опции -->
     <section class="options center">
         <div class="options__conteiner">
