--- a/product.html
+++ b/product.html
@@ -427,8 +427,10 @@
             <div class="product__filter">
                 <div class="product-trending">
                     <h3 class="product_title">Trending now</h3>
-                    <div class="product_type">Bohemian | Floral | Lace
-                        Floral | Lace | Bohemian</div>
+                    <div class="product_type">
+                        <p>Bohemian | Floral | Lace</p>
+                        <p>Floral | Lace | Bohemian</p>
+                    </div>
                 </div>
                 <div class="product-size">
                     <h3 class="product_title">Size</h3>
@@ -444,21 +446,23 @@
                 </div>
                 <div class="product-price">
                     <h3 class="product_title">Price</h3>
-                    <input type="range"><label for=""></label>
-                    <div class="product-range">
-                        <div class="product-range_start">$52</div>
-                        <div class="product-range_end">$400</div>
+                    <div class="product__range">
+                        <label for=""><input type="range"></label>
+                        <div class="product__cost product_type">
+                            <p>$52</p>
+                            <p>$400</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- блок с сортировкой -->
-            <div class="product__sort"></div>
-            <!-- блок карточек товаров -->
-            <div class="product__cards"></div>
-            <!-- блок с кнопками -->
-            <div class="product__button"></div>
 
-        </div>
+                <!-- блок с сортировкой -->
+                <div class="product__sort"></div>
+                <!-- блок карточек товаров -->
+                <div class="product__cards"></div>
+                <!-- блок с кнопками -->
+                <div class="product__button"></div>
+
+            </div>
     </section>
     <!-- // Блок продукты и фильтры -->
 
