блок sort завершен

--- a/product.html
+++ b/product.html
@@ -454,15 +454,23 @@
                         </div>
                     </div>
                 </div>
-
-                <!-- блок с сортировкой -->
-                <div class="product__sort"></div>
-                <!-- блок карточек товаров -->
-                <div class="product__cards"></div>
-                <!-- блок с кнопками -->
-                <div class="product__button"></div>
-
             </div>
+            <!-- блок с сортировкой -->
+            <div class="product__sort">
+                <div class="product__block">
+                    <div class="product__name">Sort By</div>
+                    <div class="product__name product__name_border">Name <i class="fa fa-caret-down fa-left-padding" aria-hidden="true"></i></div>
+                </div>
+                <div class="product__block">
+                    <div class="product__name">Show</div>
+                    <div class="product__name product__name_border">09 <i class="fa fa-caret-down fa-left-padding" aria-hidden="true"></i></div>
+                </div>
+            </div>
+            <!-- блок карточек товаров -->
+            <div class="product__cards"></div>
+            <!-- блок с кнопками -->
+            <div class="product__button"></div>
+
     </section>
     <!-- // Блок продукты и фильтры -->
 
