--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
                         </div>
                     </div>
                 </li>
-                <li class="menu__list "><a href="#2" class="menu__link">man</a>
+                <li class="menu__list "><a href="#2" class="menu__link">men</a>
                     <div class="dropdown">
                         <div class="menu__item">
-                            <h3 class="menu__title">man</h3>
+                            <h3 class="menu__title">men</h3>
                             <a href="#" class="menu__link menu__link_drop">Dresses</a>
                             <a href="#" class="menu__link menu__link_drop">Tops</a>
                             <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
@@ -162,20 +162,20 @@
                             <a href="#" class="menu__link menu__link_drop">Accessories</a>
                         </div>
                         <div class="menu__item">
-                            <h3 class="menu__title">man</h3>
+                            <h3 class="menu__title">men</h3>
                             <a href="#" class="menu__link menu__link_drop">Dresses</a>
                             <a href="#" class="menu__link menu__link_drop">Tops</a>
                             <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
                             <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
                         </div>
                         <div class="menu__item menu__item_mv-dwn">
-                            <h3 class="menu__title">man</h3>
+                            <h3 class="menu__title">men</h3>
                             <a href="#" class="menu__link menu__link_drop">Dresses</a>
                             <a href="#" class="menu__link menu__link_drop">Tops</a>
                             <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
                         </div>
                         <div class="menu__item menu__item_mv-up">
-                            <h3 class="menu__title">man</h3>
+                            <h3 class="menu__title">men</h3>
                             <a href="#" class="menu__link menu__link_drop">Dresses</a>
                             <a href="#" class="menu__link menu__link_drop">Tops</a>
                             <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
