изменение высоты выпадающего меню, в виду изменения позиционирования главного меню

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <!-- Главное Меню -->
         <section class="navigation center">
             <ul class="menu">
-                <li class="menu__list "><a href="#1" class="menu__link">home</a>
+                <li class="menu__list menu__list_active"><a href="#1" class="menu__link">home</a>
                     <div class="dropdown dropdown_home">
                         <div class="menu__item">
                             <h3 class="menu__title">Home</h3>
