обновление ссылок на странице index product

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- заголовок сайта -->
         <header class="main-header center">
             <div class="main-header__left">
-                <a class="main-header__left main-header__link" href="#">
+                <a class="main-header__left main-header__link" href="./index.html">
                     <img src="./img/logo.png" width="44" height="38" alt="Логотип">
                     <h1 class="main-header__brand">bran<span class="main-header__brand_red">d</span></h1>
                 </a>
@@ -131,7 +131,7 @@
         <!-- Главное Меню -->
         <section class="navigation center">
             <ul class="menu">
-                <li class="menu__list menu__list_active"><a href="#1" class="menu__link">home</a>
+                <li class="menu__list menu__list_active"><a href="./index.html" class="menu__link">home</a>
                     <div class="dropdown dropdown_home">
                         <div class="menu__item">
                             <h3 class="menu__title">Home</h3>
@@ -147,7 +147,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="menu__list "><a href="#2" class="menu__link">men</a>
+                <li class="menu__list "><a href="./product.html" class="menu__link">men</a>
                     <div class="dropdown">
                         <div class="menu__item">
                             <h3 class="menu__title">men</h3>
@@ -798,7 +798,7 @@
                 <div class="brand-container__about">
                     <!-- logo -->
                     <div class="brand-container__logo">
-                        <a class="main-header__left main-header__link" href="#">
+                        <a class="main-header__left main-header__link" href="./index.html">
                             <img src="./img/logo.png" width="44" height="38" alt="Логотип">
                             <h1 class="main-header__brand">bran<span class="main-header__brand_red">d</span></h1>
                         </a>
