--- a/product.html
+++ b/product.html
@@ -130,7 +130,7 @@
     <!-- Главное Меню -->
     <section class="navigation center">
         <ul class="menu">
-            <li class="menu__list "><a href="#1" class="menu__link">home</a>
+            <li class="menu__list "><a href="./index.html" class="menu__link">home</a>
                 <div class="dropdown dropdown_home">
                     <div class="menu__item">
                         <h3 class="menu__title">Home</h3>
@@ -146,7 +146,7 @@
                     </div>
                 </div>
             </li>
-            <li class="menu__list menu__list_active"><a href="#2" class="menu__link">men</a>
+            <li class="menu__list menu__list_active"><a href="./product.html" class="menu__link">men</a>
                 <div class="dropdown">
                     <div class="menu__item">
                         <h3 class="menu__title">men</h3>
@@ -800,7 +800,7 @@
             <div class="brand-container__about">
                 <!-- logo -->
                 <div class="brand-container__logo">
-                    <a class="main-header__left main-header__link" href="#">
+                    <a class="main-header__left main-header__link" href="./index.html">
                         <img src="./img/logo.png" width="44" height="38" alt="Логотип">
                         <h1 class="main-header__brand">bran<span class="main-header__brand_red">d</span></h1>
                     </a>
@@ -825,11 +825,11 @@
                     <h3 class="brand-container__title">COMPANY</h3>
                 </div>
                 <div class="brand-container__links">
-                    <a href="" class="menu__link brand-container__link">Home</a>
-                    <a href="" class="menu__link brand-container__link brand-container__link_lh">Shop</a>
-                    <a href="" class="menu__link brand-container__link brand-container__link_lh">About</a>
-                    <a href="" class="menu__link brand-container__link brand-container__link_lh">How it works</a>
-                    <a href="" class="menu__link brand-container__link brand-container__link_lh">Contacts</a>
+                    <a href="./index.html" class="menu__link brand-container__link">Home</a>
+                    <a href="#" class="menu__link brand-container__link brand-container__link_lh">Shop</a>
+                    <a href="#" class="menu__link brand-container__link brand-container__link_lh">About</a>
+                    <a href="#" class="menu__link brand-container__link brand-container__link_lh">How it works</a>
+                    <a href="#" class="menu__link brand-container__link brand-container__link_lh">Contacts</a>
                 </div>
             </div>
             <!-- baner2 -->
@@ -838,11 +838,11 @@
                     <h3 class="brand-container__title">INFORMATION</h3>
                 </div>
                 <div class="brand-container__links">
-                    <a href="" class="menu__link brand-container__link">Terms & Conditions</a>
-                    <a href="" class="menu__link brand-container__link brand-container__link_lh">Privacy policy</a>
-                    <a href="" class="menu__link brand-container__link brand-container__link_lh">How yo Buy</a>
-                    <a href="" class="menu__link brand-container__link brand-container__link_lh">How to Sell</a>
-                    <a href="" class="menu__link brand-container__link brand-container__link_lh">Promotion</a>
+                    <a href="#" class="menu__link brand-container__link">Terms & Conditions</a>
+                    <a href="#" class="menu__link brand-container__link brand-container__link_lh">Privacy policy</a>
+                    <a href="#" class="menu__link brand-container__link brand-container__link_lh">How yo Buy</a>
+                    <a href="#" class="menu__link brand-container__link brand-container__link_lh">How to Sell</a>
+                    <a href="#" class="menu__link brand-container__link brand-container__link_lh">Promotion</a>
                 </div>
             </div>
             <!-- baner3 -->
@@ -851,11 +851,11 @@
                     <h3 class="brand-container__title">SHOP CATEGORY</h3>
                 </div>
                 <div class="brand-container__links">
-                    <a href="" class="menu__link brand-container__link">Men</a>
-                    <a href="" class="menu__link brand-container__link brand-container__link_lh">Women</a>
-                    <a href="" class="menu__link brand-container__link brand-container__link_lh">Child</a>
-                    <a href="" class="menu__link brand-container__link brand-container__link_lh">Apparel</a>
-                    <a href="" class="menu__link brand-container__link brand-container__link_lh">Brows All</a>
+                    <a href="./product.html" class="menu__link brand-container__link">Men</a>
+                    <a href="#" class="menu__link brand-container__link brand-container__link_lh">Women</a>
+                    <a href="#" class="menu__link brand-container__link brand-container__link_lh">Child</a>
+                    <a href="#" class="menu__link brand-container__link brand-container__link_lh">Apparel</a>
+                    <a href="#" class="menu__link brand-container__link brand-container__link_lh">Brows All</a>
                 </div>
             </div>
         </div>
