работа со стилизацией кнопки в пункте продукты

--- a/product.html
+++ b/product.html
@@ -659,7 +659,12 @@
                 </div>
             </div>
             <!-- блок с кнопками -->
-            <div class="product__button"></div>
+            <div class="product__button-all">
+                <div class="product__pagination"></div>
+                <div class="product__button_all">
+                    <a class="menu__link product__link_button-all" href="#">View all</a>
+                </div>
+            </div>
 
     </section>
     <!-- // Блок продукты и фильтры -->
