--- a/product.html
+++ b/product.html
@@ -660,7 +660,30 @@
             </div>
             <!-- блок с кнопками -->
             <div class="product__button-all">
-                <div class="product__pagination"></div>
+                <div class="product__numbers">
+                    <nav class="product__nav">
+                        <ul class="product__pagination">
+                          <li class="product__pagination-item">
+                            <a class="menu__link product__pagination_link" href="#" aria-label="Previous">
+                              <span aria-hidden="true">&laquo;</span>
+                            </a>
+                          </li>
+                          <li class="product__pagination-item"><a class="menu__link product__pagination_link product__pagination_link-active" href="#">1</a></li>
+                          <li class="product__pagination-item"><a class="menu__link product__pagination_link" href="#">2</a></li>
+                          <li class="product__pagination-item"><a class="menu__link product__pagination_link" href="#">3</a></li>
+                          <li class="product__pagination-item"><a class="menu__link product__pagination_link" href="#">4</a></li>
+                          <li class="product__pagination-item"><a class="menu__link product__pagination_link" href="#">5</a></li>
+                          <li class="product__pagination-item"><a class="menu__link product__pagination_link" href="#">6</a></li>
+                          <li class="product__pagination-item"><a class="menu__link product__pagination_link" href="#">7</a></li>
+                          <li class="product__pagination-item"><a class="menu__link product__pagination_link" href="#">8</a></li>
+                          <li class="product__pagination-item">
+                            <a class="menu__link product__pagination_link" href="#" aria-label="Next">
+                              <span aria-hidden="true">&raquo;</span>
+                            </a>
+                          </li>
+                        </ul>
+                      </nav>
+                </div>
                 <div class="product__button_all">
                     <a class="menu__link product__link_button-all" href="#">View all</a>
                 </div>
