добавил код ранее созданый в блоке options на всю страницц фон

--- a/product.html
+++ b/product.html
@@ -693,7 +693,7 @@
     <!-- // Блок продукты и фильтры -->
 
     <!-- блок Опции -->
-    <section class="options center">
+    <section class="options options_chg-product-page center">
         <div class="options__conteiner">
             <div class="option">
                 <!-- block 1-->
