расположил контент по все ширине блока и по центру блока, уменьшил высоту блока до 341px

--- a/product.html
+++ b/product.html
@@ -694,8 +694,8 @@
 
     <!-- блок Опции -->
     <section class="options options_chg-product-page center">
-        <div class="options__conteiner">
-            <div class="option">
+        <div class="options__conteiner options__conteiner_chg-product-page">
+            <div class="option option_chg-product-page">
                 <!-- block 1-->
                 <div class="option__item">
                     <div class="option__svg">
