создание родительского селектор change группировка стилей

--- a/product.html
+++ b/product.html
@@ -693,11 +693,11 @@
     <!-- // Блок продукты и фильтры -->
 
     <!-- блок Опции -->
-    <section class="options options_chg-product-page center">
-        <div class="options__conteiner options__conteiner_chg-product-page">
-            <div class="option option_chg-product-page">
+    <section class="options change center">
+        <div class="options__conteiner change_options-conteiner">
+            <div class="option change_option">
                 <!-- block 1-->
-                <div class="option__item">
+                <div class="option__item change_item">
                     <div class="option__svg">
                         <svg width="45 " height="32" viewBox="0 0 54 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g filter="url(#filter0_d_128_193)">
@@ -734,7 +734,7 @@
                 </div>
                 <!-- // block 1-->
                 <!-- block 2-->
-                <div class="option__item">
+                <div class="option__item change_item">
                     <div class="option__svg">
                         <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -753,7 +753,7 @@
                 </div>
                 <!-- // block 2-->
                 <!-- block 3-->
-                <div class="option__item">
+                <div class="option__item change_item">
                     <div class="option__svg">
                         <svg width="48" height="35" viewBox="0 0 48 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
