все высталвено по макету,  осталось разобраться с svg

--- a/product.html
+++ b/product.html
@@ -723,7 +723,7 @@
                             </defs>
                         </svg>
                     </div>
-                    <div class="option__header">
+                    <div class="option__header change_header">
                         <h3 class="option-item__head">Free Delivery</h3>
                         <p class="option-item__title">
                             Worldwide delivery on&nbsp;all. Authorit tively morph next-generation innov tion with
@@ -742,7 +742,7 @@
                                 fill="#F16D7F" />
                         </svg>
                     </div>
-                    <div class="option__header">
+                    <div class="option__header change_header">
                         <h3 class="option-item__head">Sales & discounts</h3>
                         <p class="option-item__title">
                             Worldwide delivery on&nbsp;all. Authorit tively morph next-generation innov tion with
@@ -761,7 +761,7 @@
                                 fill="#F16D7F" />
                         </svg>
                     </div>
-                    <div class="option__header">
+                    <div class="option__header change_header">
                         <h3 class="option-item__head">Quality assurance</h3>
                         <p class="option-item__title">
                             Worldwide delivery on&nbsp;all. Authorit tively morph next-generation innov tion with
